--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,9 +22,9 @@
         <property name="currentIndex">
          <number>0</number>
         </property>
-        <widget class="QWidget" name="Test">
+        <widget class="QWidget" name="View">
          <attribute name="title">
-          <string>Test</string>
+          <string>View</string>
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
@@ -119,7 +119,7 @@
      <x>0</x>
      <y>0</y>
      <width>887</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCalls">
