--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QTabWidget" name="tabWidget">
+       <widget class="QTabWidget" name="Control">
         <property name="currentIndex">
          <number>0</number>
         </property>
@@ -35,6 +35,11 @@
            </widget>
           </item>
          </layout>
+        </widget>
+        <widget class="QWidget" name="tab">
+         <attribute name="title">
+          <string>Control</string>
+         </attribute>
         </widget>
         <widget class="QWidget" name="Terminal">
          <attribute name="title">
@@ -119,7 +124,7 @@
      <x>0</x>
      <y>0</y>
      <width>887</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCalls">
