--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
       <item>
        <widget class="QTabWidget" name="Control">
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="View">
          <attribute name="title">
@@ -62,6 +62,13 @@
                   <widget class="QPushButton" name="pushButton_11">
                    <property name="text">
                     <string>Save Config</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="pushButton_14">
+                   <property name="text">
+                    <string>Read Config</string>
                    </property>
                   </widget>
                  </item>
@@ -121,7 +128,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QDoubleSpinBox" name="doubleSpinBox_5"/>
+                   <widget class="QDoubleSpinBox" name="currentTargetDoubleSpinBox"/>
                   </item>
                   <item>
                    <spacer name="horizontalSpacer_2">
@@ -332,7 +339,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QDoubleSpinBox" name="doubleSpinBox_6"/>
+                   <widget class="QDoubleSpinBox" name="speedTargetDoubleSpinBox"/>
                   </item>
                   <item>
                    <spacer name="horizontalSpacer_4">
@@ -491,7 +498,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QDoubleSpinBox" name="doubleSpinBox_7"/>
+                   <widget class="QDoubleSpinBox" name="positionTargetDoubleSpinBox"/>
                   </item>
                   <item>
                    <spacer name="horizontalSpacer_7">
